tests/snapshots/insta_test__array_syntax_sugar-3.snap
---
source: tests/insta_test.rs
expression: tester.conv_program().as_ref().unwrap()
---
ConvProgram {
    components: [
        Func(
            ConvFuncDef {
                ty: Func {
                    ret_ty: Base(
                        Int,
                    ),
                    args: [],
                    is_flexible: true,
                },
                name: "main",
                args: [],
                body: Block(
                    [
                        Block(
                            [],
                        ),
                        Return(
                            ConvExpr {
                                kind: Deref(
                                    ConvExpr {
                                        kind: Binary(
                                            ConvBinary {
                                                kind: Add,
                                                lhs: ConvExpr {
                                                    kind: Addr(
                                                        ConvExpr {
                                                            kind: LVar(
                                                                LVar {
                                                                    offset: 20,
                                                                    ty: Array(
                                                                        Base(
                                                                            Int,
                                                                        ),
                                                                        5,
                                                                    ),
                                                                },
                                                            ),
                                                            ty: Base(
                                                                Int,
                                                            ),
                                                            debug_info: DebugInfo {
                                                                file_name: "",
                                                                pos: Position {
                                                                    n_char: 15,
                                                                    n_line: 3,
                                                                },
                                                            },
                                                        },
                                                    ),
                                                    ty: Ptr(
                                                        Base(
                                                            Int,
                                                        ),
                                                    ),
                                                    debug_info: DebugInfo {
                                                        file_name: "",
                                                        pos: Position {
                                                            n_char: 15,
                                                            n_line: 3,
                                                        },
                                                    },
                                                },
                                                rhs: ConvExpr {
                                                    kind: Binary(
                                                        ConvBinary {
                                                            kind: Mul,
                                                            lhs: ConvExpr {
                                                                kind: Num(
                                                                    0,
                                                                ),
                                                                ty: Base(
                                                                    Int,
                                                                ),
                                                                debug_info: DebugInfo {
                                                                    file_name: "",
                                                                    pos: Position {
                                                                        n_char: 21,
                                                                        n_line: 3,
                                                                    },
                                                                },
                                                            },
                                                            rhs: ConvExpr {
                                                                kind: Num(
                                                                    4,
                                                                ),
                                                                ty: Base(
                                                                    Int,
                                                                ),
                                                                debug_info: DebugInfo {
                                                                    file_name: "",
                                                                    pos: Position {
                                                                        n_char: 15,
                                                                        n_line: 3,
                                                                    },
                                                                },
                                                            },
                                                        },
                                                    ),
                                                    ty: Base(
                                                        Int,
                                                    ),
                                                    debug_info: DebugInfo {
                                                        file_name: "",
                                                        pos: Position {
                                                            n_char: 15,
                                                            n_line: 3,
                                                        },
                                                    },
                                                },
                                            },
                                        ),
                                        ty: Ptr(
                                            Base(
                                                Int,
                                            ),
                                        ),
                                        debug_info: DebugInfo {
                                            file_name: "",
                                            pos: Position {
                                                n_char: 15,
                                                n_line: 3,
                                            },
                                        },
                                    },
                                ),
                                ty: Base(
                                    Int,
                                ),
                                debug_info: DebugInfo {
                                    file_name: "",
                                    pos: Position {
                                        n_char: 15,
                                        n_line: 3,
                                    },
                                },
                            },
                            "main",
                        ),
                    ],
                ),
                stack_size: 20,
            },
        ),
    ],
}
