tests/snapshots/insta_test__array_syntax_sugar-4.snap
---
source: tests/insta_test.rs
expression: tester.tokens().as_ref().unwrap()
---
[
    Token {
        kind: Type(
            Int,
        ),
        debug_info: DebugInfo {
            file_info: FileInfo {
                file_name: "not impl name.c",
                src: "\nint main() {\n int array[5];\n        return array[3];\n    }\n",
            },
            pos: Position {
                n_char: 0,
                n_line: 1,
            },
        },
    },
    Token {
        kind: Ident(
            "main",
        ),
        debug_info: DebugInfo {
            file_info: FileInfo {
                file_name: "not impl name.c",
                src: "\nint main() {\n int array[5];\n        return array[3];\n    }\n",
            },
            pos: Position {
                n_char: 4,
                n_line: 1,
            },
        },
    },
    Token {
        kind: OpenDelim(
            Paren,
        ),
        debug_info: DebugInfo {
            file_info: FileInfo {
                file_name: "not impl name.c",
                src: "\nint main() {\n int array[5];\n        return array[3];\n    }\n",
            },
            pos: Position {
                n_char: 8,
                n_line: 1,
            },
        },
    },
    Token {
        kind: CloseDelim(
            Paren,
        ),
        debug_info: DebugInfo {
            file_info: FileInfo {
                file_name: "not impl name.c",
                src: "\nint main() {\n int array[5];\n        return array[3];\n    }\n",
            },
            pos: Position {
                n_char: 9,
                n_line: 1,
            },
        },
    },
    Token {
        kind: OpenDelim(
            Brace,
        ),
        debug_info: DebugInfo {
            file_info: FileInfo {
                file_name: "not impl name.c",
                src: "\nint main() {\n int array[5];\n        return array[3];\n    }\n",
            },
            pos: Position {
                n_char: 11,
                n_line: 1,
            },
        },
    },
    Token {
        kind: Type(
            Int,
        ),
        debug_info: DebugInfo {
            file_info: FileInfo {
                file_name: "not impl name.c",
                src: "\nint main() {\n int array[5];\n        return array[3];\n    }\n",
            },
            pos: Position {
                n_char: 1,
                n_line: 2,
            },
        },
    },
    Token {
        kind: Ident(
            "array",
        ),
        debug_info: DebugInfo {
            file_info: FileInfo {
                file_name: "not impl name.c",
                src: "\nint main() {\n int array[5];\n        return array[3];\n    }\n",
            },
            pos: Position {
                n_char: 5,
                n_line: 2,
            },
        },
    },
    Token {
        kind: OpenDelim(
            Bracket,
        ),
        debug_info: DebugInfo {
            file_info: FileInfo {
                file_name: "not impl name.c",
                src: "\nint main() {\n int array[5];\n        return array[3];\n    }\n",
            },
            pos: Position {
                n_char: 10,
                n_line: 2,
            },
        },
    },
    Token {
        kind: Num(
            5,
        ),
        debug_info: DebugInfo {
            file_info: FileInfo {
                file_name: "not impl name.c",
                src: "\nint main() {\n int array[5];\n        return array[3];\n    }\n",
            },
            pos: Position {
                n_char: 11,
                n_line: 2,
            },
        },
    },
    Token {
        kind: CloseDelim(
            Bracket,
        ),
        debug_info: DebugInfo {
            file_info: FileInfo {
                file_name: "not impl name.c",
                src: "\nint main() {\n int array[5];\n        return array[3];\n    }\n",
            },
            pos: Position {
                n_char: 12,
                n_line: 2,
            },
        },
    },
    Token {
        kind: Semi,
        debug_info: DebugInfo {
            file_info: FileInfo {
                file_name: "not impl name.c",
                src: "\nint main() {\n int array[5];\n        return array[3];\n    }\n",
            },
            pos: Position {
                n_char: 13,
                n_line: 2,
            },
        },
    },
    Token {
        kind: Return,
        debug_info: DebugInfo {
            file_info: FileInfo {
                file_name: "not impl name.c",
                src: "\nint main() {\n int array[5];\n        return array[3];\n    }\n",
            },
            pos: Position {
                n_char: 8,
                n_line: 3,
            },
        },
    },
    Token {
        kind: Ident(
            "array",
        ),
        debug_info: DebugInfo {
            file_info: FileInfo {
                file_name: "not impl name.c",
                src: "\nint main() {\n int array[5];\n        return array[3];\n    }\n",
            },
            pos: Position {
                n_char: 15,
                n_line: 3,
            },
        },
    },
    Token {
        kind: OpenDelim(
            Bracket,
        ),
        debug_info: DebugInfo {
            file_info: FileInfo {
                file_name: "not impl name.c",
                src: "\nint main() {\n int array[5];\n        return array[3];\n    }\n",
            },
            pos: Position {
                n_char: 20,
                n_line: 3,
            },
        },
    },
    Token {
        kind: Num(
            3,
        ),
        debug_info: DebugInfo {
            file_info: FileInfo {
                file_name: "not impl name.c",
                src: "\nint main() {\n int array[5];\n        return array[3];\n    }\n",
            },
            pos: Position {
                n_char: 21,
                n_line: 3,
            },
        },
    },
    Token {
        kind: CloseDelim(
            Bracket,
        ),
        debug_info: DebugInfo {
            file_info: FileInfo {
                file_name: "not impl name.c",
                src: "\nint main() {\n int array[5];\n        return array[3];\n    }\n",
            },
            pos: Position {
                n_char: 22,
                n_line: 3,
            },
        },
    },
    Token {
        kind: Semi,
        debug_info: DebugInfo {
            file_info: FileInfo {
                file_name: "not impl name.c",
                src: "\nint main() {\n int array[5];\n        return array[3];\n    }\n",
            },
            pos: Position {
                n_char: 23,
                n_line: 3,
            },
        },
    },
    Token {
        kind: CloseDelim(
            Brace,
        ),
        debug_info: DebugInfo {
            file_info: FileInfo {
                file_name: "not impl name.c",
                src: "\nint main() {\n int array[5];\n        return array[3];\n    }\n",
            },
            pos: Position {
                n_char: 4,
                n_line: 4,
            },
        },
    },
    Token {
        kind: Eof,
        debug_info: DebugInfo {
            file_info: FileInfo {
                file_name: "not impl name.c",
                src: "\nint main() {\n int array[5];\n        return array[3];\n    }\n",
            },
            pos: Position {
                n_char: 5,
                n_line: 4,
            },
        },
    },
]
